samples/_failures_safe/1761226113_e7662d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_84d7f6bc.c: In function ‘main’:
./samples/SAFE/__tmp_84d7f6bc.c:155:12: error: missing terminating " character
  155 |     printf("Enter expression to tokenize
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_84d7f6bc.c:155:5: error: expected expression at end of input
  155 |     printf("Enter expression to tokenize
      |     ^~~~~~
./samples/SAFE/__tmp_84d7f6bc.c:155:5: error: expected declaration or statement at end of input
